--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,16 +20,16 @@
 
 title: Ziyan Lei's Great notebook
 email: zlei2@lsu.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: This is a blog for recording my interst learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://geogalary.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: None yet
 github_username:  geogalary
 
 # Build settings
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 theme: minima
 plugins:
   - jekyll-feed
